--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* body{
+    background: #f4f3f3d6;
+} */
 
 .slick-arrow{
     background: #84CC16 !important;
@@ -105,3 +108,28 @@ h1{
     @apply text-2xl uppercase  py-3
 }       
            
+
+.extra-section {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.25rem 2.5rem;
+    color: white;
+    margin: 1.25rem 0;
+}
+
+.extra-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://www.foodunfolded.com/media/images/in-article-farm-pesticide-spray.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.4); /* Black background with 40% opacity */
+    z-index: -1; /* Ensure the background is behind the content */
+}
